# metronome

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: Metronome.icns
src/: main.rs
src/widgets/: circle.rs  mod.rs
